# serializer version: 1
# name: test_light_setup_ultima[light.mock_title_ambilight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Off',
        'Blur',
        'Rainbow',
        'Breathing',
        'Color Wipe',
        'Comet',
        'Fire',
        'Twinkle',
        'Police',
        'Chase',
        'Color Cycle',
        'Gradient Scroll',
        'Strobe',
        'System Warning',
        'System Error',
        'System OK',
        'System Info',
      ]),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_title_ambilight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ambilight',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:led-strip',
    'original_name': 'Ambilight',
    'platform': 'smlight',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'ambilight',
    'unique_id': 'aa:bb:cc:dd:ee:ff-ambilight',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_setup_ultima[light.mock_title_ambilight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <LightEntityStateAttribute.EFFECT: 'effect'>: None,
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Off',
        'Blur',
        'Rainbow',
        'Breathing',
        'Color Wipe',
        'Comet',
        'Fire',
        'Twinkle',
        'Police',
        'Chase',
        'Color Cycle',
        'Gradient Scroll',
        'Strobe',
        'System Warning',
        'System Error',
        'System OK',
        'System Info',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Title Ambilight',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:led-strip',
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 4>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_title_ambilight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
